--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "maplibre-gl": "^4.3.2",
     "next": "14.2.3",
+    "pmtiles": "^3.0.5",
     "react": "^18",
     "react-dom": "^18"
   },
