--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.379.0",
+    "maplibre-gl": "^4.3.2",
     "next": "14.2.3",
+    "pmtiles": "^3.0.5",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
