--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "firebase": "^10.12.2",
     "maplibre-gl": "^4.3.2",
     "next": "14.2.3",
     "pmtiles": "^3.0.5",
