--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-icons": "^5.2.1",
     "react-map-gl": "^7.1.7",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
