--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "lucide-react": "^0.379.0",
     "maplibre-gl": "^4.3.2",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "pmtiles": "^3.0.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-map-gl": "^7.1.7",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1"
