--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
-    "@zxing/browser": "^0.1.5",
-    "@zxing/library": "^0.21.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.5",
@@ -58,7 +56,9 @@
     "tailwindcss": "^3.4.1",
     "ts-jest": "29.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@zxing/browser": "^0.1.5",
+    "@zxing/library": "^0.21.1"
   },
   "repository": {
     "type": "git",
