chore: add development branch as well

--- a/.github/cypress.yml
+++ b/.github/cypress.yml
@@ -2,9 +2,9 @@ name: "Tests: Cypress e2e"
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "development"]
   pull_request:
-    branches: ["main"]
+    branches: ["main", "development"]
   schedule:
     - cron: "45 15 * * 4"
 
@@ -19,7 +19,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "18" 
+          node-version: "18"
 
       - name: Install dependencies
         run: npm ci
